# liblunispim

./: .gitignore  CMakeLists.txt  Makefile  README.md  liblunispim.pc.in  lunispim.pc.in
data/lunispim/ini/: 中文符号.ini  双拼.ini  固顶字.ini
data/lunispim/phrase/: 系统短语库.ini
include/: ci.h  config.h  context.h  debug.h  editor.h  english.h  fontcheck.h  gbk_map.h  gram.h  icw.h  init.h  kernel.h  lunispim_api.h  malloca.h  map_file.h  pim_resource.h  pim_state.h  share_segment.h  shared_memory.h  spw.h  str-kmp.h  syllable.h  symbol.h  utf16char.h  utility.h  vc.h  verify.h  wordlib.h  zi.h
src/: CMakeLists.txt  bh.c  bigram.c  ci.c  config.c  context.c  editor.c  english.c  fontcheck.c  gbk_map.c  icw.c  init.c  j2f.c  kernel.c  lunispim_api.c  malloca.c  map_file.c  pim_resource.c  share_segment.c  shared_memory.cc  spw.c  syllable.c  symbol.c  utf16char.c  utility.c  vc.c  wordlib.c  zi.c
