include_directories (${PROJECT_SOURCE_DIR}/include)
aux_source_directory(. SRC_LUNISPIM)
#add_compile_options(-lm)
#add_definitions(-D_XOPEN_SOURCE=500)
add_compile_options(-Wno-write-strings)
set(LIB_LUNISPIM "lunispim")
set(API_HEAD_FILE ${PROJECT_SOURCE_DIR}/include/lunispim_api.h)
add_library(${LIB_LUNISPIM} SHARED ${SRC_LUNISPIM})
target_link_libraries (${LIB_LUNISPIM})
set_target_properties(${LIB_LUNISPIM} PROPERTIES OUTPUT_NAME ${LIB_LUNISPIM} VERSION ${LUNISPIM_VERSION})
if(DEFINED DESTDIR)
	install(TARGETS ${LIB_LUNISPIM} LIBRARY DESTINATION ${DESTDIR}${LIB_INSTALL_DIR})
	install(FILES ${API_HEAD_FILE} DESTINATION ${DESTDIR}${INC_INSTALL_DIR}/lunispim)
else()
	install(TARGETS ${LIB_LUNISPIM} LIBRARY DESTINATION ${LIB_INSTALL_DIR})
	install(FILES ${API_HEAD_FILE} DESTINATION ${INC_INSTALL_DIR}/lunispim)
endif()
